parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    STR
    TRUE
    FALSE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM neuraladdfuncdir varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR neuralmainjump statutes RIGHTBR
Rule 2     neuraladdfuncdir -> ID SEMICOLON
Rule 3     neuralmainjump -> <empty>
Rule 4     varsgl -> VARS vars
Rule 5     varsgl -> empty
Rule 6     vars -> typing COLON neuralinsertvar varsarr varsmul vars
Rule 7     vars -> empty
Rule 8     neuralinsertvar -> ID
Rule 9     varsmul -> SEMICOLON
Rule 10    varsmul -> COMMA neuralinsertvar varsarr varsmul
Rule 11    varsarr -> neuralinitdim CTEINT neuralenddim
Rule 12    varsarr -> empty
Rule 13    neuralenddim -> RIGHTSQR
Rule 14    neuralinitdim -> LEFTSQR
Rule 15    idarray -> neuralinitarray exp verify RIGHTSQR
Rule 16    idarray -> empty
Rule 17    neuralinitarray -> LEFTSQR
Rule 18    verify -> <empty>
Rule 19    typing -> INT
Rule 20    typing -> FLOAT
Rule 21    typing -> CHAR
Rule 22    modules -> FUNCTION functype neuralinsertfuncs funcparam
Rule 23    modules -> empty
Rule 24    neuralinsertfuncs -> ID
Rule 25    funcparam -> LEFTPAR parameters RIGHTPAR SEMICOLON varsgl LEFTBR neuralinitfuncs statutes RIGHTBR neuralfuncsize neuralendfuncs modules
Rule 26    neuralendfuncs -> <empty>
Rule 27    neuralfuncsize -> <empty>
Rule 28    neuralinitfuncs -> <empty>
Rule 29    functype -> VOID
Rule 30    functype -> typing
Rule 31    parameters -> typing COLON neuralinsertparam idarray mulparams
Rule 32    parameters -> empty
Rule 33    neuralinsertparam -> ID
Rule 34    mulparams -> COMMA parameters
Rule 35    mulparams -> empty
Rule 36    statutes -> assign statuteaux
Rule 37    statutes -> reading statuteaux
Rule 38    statutes -> writing statuteaux
Rule 39    statutes -> returning statuteaux
Rule 40    statutes -> ifing statuteaux
Rule 41    statutes -> whiling statuteaux
Rule 42    statutes -> foring statuteaux
Rule 43    statutes -> exp statuteaux
Rule 44    statutes -> media statuteaux
Rule 45    statutes -> plotxy statuteaux
Rule 46    statutes -> mediana statuteaux
Rule 47    statutes -> moda statuteaux
Rule 48    statutes -> variance statuteaux
Rule 49    statutes -> stdev statuteaux
Rule 50    statuteaux -> statutes
Rule 51    statuteaux -> empty
Rule 52    media -> MEDIA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 53    mediana -> MEDIANA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 54    moda -> MODA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 55    stdev -> STDEV LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 56    variance -> VARIANZA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 57    plotxy -> PLOTXY LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 58    specialfunclist -> <empty>
Rule 59    specfuncnumbers -> CTEINT neuralnum mulnumeros
Rule 60    specfuncnumbers -> CTEFLOAT neuralnum mulnumeros
Rule 61    neuralnum -> <empty>
Rule 62    mulnumeros -> COMMA specfuncnumbers
Rule 63    mulnumeros -> empty
Rule 64    assign -> neuralassign idarray neuralassign2 assignexp SEMICOLON
Rule 65    neuralassign -> ID
Rule 66    neuralassign2 -> EQUAL
Rule 67    assignexp -> exp
Rule 68    returning -> RETURN LEFTPAR exp RIGHTPAR SEMICOLON
Rule 69    reading -> READ LEFTPAR neuralreadid idarray mulread RIGHTPAR SEMICOLON
Rule 70    neuralreadid -> ID
Rule 71    mulread -> COMMA neuralreadid idarray mulread
Rule 72    mulread -> empty
Rule 73    writing -> WRITE LEFTPAR neuralwrite mulwrite RIGHTPAR SEMICOLON
Rule 74    neuralwrite -> writetype
Rule 75    neuralwrite -> exp
Rule 76    writetype -> STRING
Rule 77    writetype -> CTECHAR
Rule 78    mulwrite -> COMMA neuralwrite mulwrite
Rule 79    mulwrite -> empty
Rule 80    ifing -> IF LEFTPAR exp neuralif THEN LEFTBR statutes RIGHTBR elsing
Rule 81    elsing -> neuralelse LEFTBR statutes RIGHTBR
Rule 82    elsing -> empty
Rule 83    neuralelse -> ELSE
Rule 84    neuralif -> RIGHTPAR
Rule 85    whiling -> neuralwhile LEFTPAR exp neuralwhile2 DO LEFTBR statutes RIGHTBR
Rule 86    neuralwhile -> WHILE
Rule 87    neuralwhile2 -> RIGHTPAR
Rule 88    foring -> FOR neuralfor idarray EQUAL exp neuralfor2 exp neuralfor3 LEFTBR statutes RIGHTBR
Rule 89    neuralfor -> ID
Rule 90    neuralfor2 -> TO
Rule 91    neuralfor3 -> DO
Rule 92    exp -> andexp exp1
Rule 93    exp1 -> OR exp
Rule 94    exp1 -> empty
Rule 95    andexp -> boolexp andexp1
Rule 96    andexp1 -> neuraland andexp
Rule 97    andexp1 -> empty
Rule 98    neuraland -> AND
Rule 99    boolexp -> arithexp boolexp1
Rule 100   boolexp1 -> neuralbool arithexp
Rule 101   boolexp1 -> empty
Rule 102   neuralbool -> GREATER
Rule 103   neuralbool -> GREATERAND
Rule 104   neuralbool -> LESSER
Rule 105   neuralbool -> LESSERAND
Rule 106   neuralbool -> SAME
Rule 107   neuralbool -> NOTSAME
Rule 108   neuralbool -> NOT
Rule 109   arithexp -> geoexp arithexp1
Rule 110   arithexp1 -> neuralarith arithexp
Rule 111   arithexp1 -> empty
Rule 112   neuralarith -> PLUS
Rule 113   neuralarith -> REST
Rule 114   geoexp -> finexp geoexp1
Rule 115   geoexp1 -> neuralgeo geoexp
Rule 116   geoexp1 -> empty
Rule 117   neuralgeo -> TIMES
Rule 118   neuralgeo -> DIVIDE
Rule 119   addbottom -> LEFTPAR
Rule 120   popbottom -> RIGHTPAR
Rule 121   finexp -> addbottom exp popbottom
Rule 122   finexp -> cteexp
Rule 123   cteexp -> CTEINT
Rule 124   cteexp -> CTEFLOAT
Rule 125   cteexp -> CTECHAR
Rule 126   cteexp -> ID neuralexist paramsexp
Rule 127   neuralexist -> <empty>
Rule 128   paramsexp -> LEFTPAR neuralera paramsexp2 neuralpar
Rule 129   paramsexp -> idarray
Rule 130   paramsexp2 -> exp neuralpar2 mulparamsexp
Rule 131   paramsexp2 -> empty
Rule 132   neuralpar -> RIGHTPAR
Rule 133   neuralera -> <empty>
Rule 134   neuralpar2 -> <empty>
Rule 135   mulparamsexp -> COMMA exp neuralpar2 mulparamsexp
Rule 136   mulparamsexp -> empty
Rule 137   empty -> <empty>

Terminals, with rules where they appear

AND                  : 98
CHAR                 : 21
COLON                : 6 31
COMMA                : 10 34 62 71 78 135
CTECHAR              : 77 125
CTEFLOAT             : 60 124
CTEINT               : 11 59 123
DIVIDE               : 118
DO                   : 85 91
ELSE                 : 83
EQUAL                : 66 88
FALSE                : 
FLOAT                : 20
FOR                  : 88
FUNCTION             : 22
GREATER              : 102
GREATERAND           : 103
ID                   : 2 8 24 33 65 70 89 126
IF                   : 80
INT                  : 19
LEFTBR               : 1 25 80 81 85 88
LEFTPAR              : 1 25 52 53 54 55 56 57 68 69 73 80 85 119 128
LEFTSQR              : 14 17
LESSER               : 104
LESSERAND            : 105
MAIN                 : 1
MEDIA                : 52
MEDIANA              : 53
MODA                 : 54
NOT                  : 108
NOTSAME              : 107
OR                   : 93
PLOTXY               : 57
PLUS                 : 112
PROGRAM              : 1
READ                 : 69
REST                 : 113
RETURN               : 68
RIGHTBR              : 1 25 80 81 85 88
RIGHTPAR             : 1 25 52 53 54 55 56 57 68 69 73 84 87 120 132
RIGHTSQR             : 13 15
SAME                 : 106
SEMICOLON            : 2 9 25 52 53 54 55 56 57 64 68 69 73
STDEV                : 55
STR                  : 
STRING               : 76
THEN                 : 80
TIMES                : 117
TO                   : 90
TRUE                 : 
VARIANZA             : 56
VARS                 : 4
VOID                 : 29
WHILE                : 86
WRITE                : 73
error                : 

Nonterminals, with rules where they appear

addbottom            : 121
andexp               : 92 96
andexp1              : 95
arithexp             : 99 100 110
arithexp1            : 109
assign               : 36
assignexp            : 64
boolexp              : 95
boolexp1             : 99
cteexp               : 122
elsing               : 80
empty                : 5 7 12 16 23 32 35 51 63 72 79 82 94 97 101 111 116 131 136
exp                  : 15 43 67 68 75 80 85 88 88 93 121 130 135
exp1                 : 92
finexp               : 114
foring               : 42
funcparam            : 22
functype             : 22
geoexp               : 109 115
geoexp1              : 114
idarray              : 31 64 69 71 88 129
ifing                : 40
media                : 44
mediana              : 46
moda                 : 47
modules              : 1 25
mulnumeros           : 59 60
mulparams            : 31
mulparamsexp         : 130 135
mulread              : 69 71
mulwrite             : 73 78
neuraladdfuncdir     : 1
neuraland            : 96
neuralarith          : 110
neuralassign         : 64
neuralassign2        : 64
neuralbool           : 100
neuralelse           : 81
neuralenddim         : 11
neuralendfuncs       : 25
neuralera            : 128
neuralexist          : 126
neuralfor            : 88
neuralfor2           : 88
neuralfor3           : 88
neuralfuncsize       : 25
neuralgeo            : 115
neuralif             : 80
neuralinitarray      : 15
neuralinitdim        : 11
neuralinitfuncs      : 25
neuralinsertfuncs    : 22
neuralinsertparam    : 31
neuralinsertvar      : 6 10
neuralmainjump       : 1
neuralnum            : 59 60
neuralpar            : 128
neuralpar2           : 130 135
neuralreadid         : 69 71
neuralwhile          : 85
neuralwhile2         : 85
neuralwrite          : 73 78
parameters           : 25 34
paramsexp            : 126
paramsexp2           : 128
plotxy               : 45
popbottom            : 121
program              : 0
reading              : 37
returning            : 39
specfuncnumbers      : 52 53 54 55 56 57 62
specialfunclist      : 52 53 54 55 56 57
statuteaux           : 36 37 38 39 40 41 42 43 44 45 46 47 48 49
statutes             : 1 25 50 80 81 85 88
stdev                : 49
typing               : 6 30 31
variance             : 48
vars                 : 4 6
varsarr              : 6 10
varsgl               : 1 25
varsmul              : 6 10
verify               : 15
whiling              : 41
writetype            : 74
writing              : 38

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM neuraladdfuncdir varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR neuralmainjump statutes RIGHTBR

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . neuraladdfuncdir varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR neuralmainjump statutes RIGHTBR
    (2) neuraladdfuncdir -> . ID SEMICOLON

    ID              shift and go to state 4

    neuraladdfuncdir               shift and go to state 3

state 3

    (1) program -> PROGRAM neuraladdfuncdir . varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR neuralmainjump statutes RIGHTBR
    (4) varsgl -> . VARS vars
    (5) varsgl -> . empty
    (137) empty -> .

    VARS            shift and go to state 6
    FUNCTION        reduce using rule 137 (empty -> .)
    MAIN            reduce using rule 137 (empty -> .)

    varsgl                         shift and go to state 5
    empty                          shift and go to state 7

state 4

    (2) neuraladdfuncdir -> ID . SEMICOLON

    SEMICOLON       shift and go to state 8


state 5

    (1) program -> PROGRAM neuraladdfuncdir varsgl . modules MAIN LEFTPAR RIGHTPAR LEFTBR neuralmainjump statutes RIGHTBR
    (22) modules -> . FUNCTION functype neuralinsertfuncs funcparam
    (23) modules -> . empty
    (137) empty -> .

    FUNCTION        shift and go to state 10
    MAIN            reduce using rule 137 (empty -> .)

    modules                        shift and go to state 9
    empty                          shift and go to state 11

state 6

    (4) varsgl -> VARS . vars
    (6) vars -> . typing COLON neuralinsertvar varsarr varsmul vars
    (7) vars -> . empty
    (19) typing -> . INT
    (20) typing -> . FLOAT
    (21) typing -> . CHAR
    (137) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    FUNCTION        reduce using rule 137 (empty -> .)
    MAIN            reduce using rule 137 (empty -> .)
    LEFTBR          reduce using rule 137 (empty -> .)

    vars                           shift and go to state 12
    typing                         shift and go to state 13
    empty                          shift and go to state 14

state 7

    (5) varsgl -> empty .

    FUNCTION        reduce using rule 5 (varsgl -> empty .)
    MAIN            reduce using rule 5 (varsgl -> empty .)
    LEFTBR          reduce using rule 5 (varsgl -> empty .)


state 8

    (2) neuraladdfuncdir -> ID SEMICOLON .

    VARS            reduce using rule 2 (neuraladdfuncdir -> ID SEMICOLON .)
    FUNCTION        reduce using rule 2 (neuraladdfuncdir -> ID SEMICOLON .)
    MAIN            reduce using rule 2 (neuraladdfuncdir -> ID SEMICOLON .)


state 9

    (1) program -> PROGRAM neuraladdfuncdir varsgl modules . MAIN LEFTPAR RIGHTPAR LEFTBR neuralmainjump statutes RIGHTBR

    MAIN            shift and go to state 18


state 10

    (22) modules -> FUNCTION . functype neuralinsertfuncs funcparam
    (29) functype -> . VOID
    (30) functype -> . typing
    (19) typing -> . INT
    (20) typing -> . FLOAT
    (21) typing -> . CHAR

    VOID            shift and go to state 20
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    functype                       shift and go to state 19
    typing                         shift and go to state 21

state 11

    (23) modules -> empty .

    MAIN            reduce using rule 23 (modules -> empty .)


state 12

    (4) varsgl -> VARS vars .

    FUNCTION        reduce using rule 4 (varsgl -> VARS vars .)
    MAIN            reduce using rule 4 (varsgl -> VARS vars .)
    LEFTBR          reduce using rule 4 (varsgl -> VARS vars .)


state 13

    (6) vars -> typing . COLON neuralinsertvar varsarr varsmul vars

    COLON           shift and go to state 22


state 14

    (7) vars -> empty .

    FUNCTION        reduce using rule 7 (vars -> empty .)
    MAIN            reduce using rule 7 (vars -> empty .)
    LEFTBR          reduce using rule 7 (vars -> empty .)


state 15

    (19) typing -> INT .

    COLON           reduce using rule 19 (typing -> INT .)
    ID              reduce using rule 19 (typing -> INT .)


state 16

    (20) typing -> FLOAT .

    COLON           reduce using rule 20 (typing -> FLOAT .)
    ID              reduce using rule 20 (typing -> FLOAT .)


state 17

    (21) typing -> CHAR .

    COLON           reduce using rule 21 (typing -> CHAR .)
    ID              reduce using rule 21 (typing -> CHAR .)


state 18

    (1) program -> PROGRAM neuraladdfuncdir varsgl modules MAIN . LEFTPAR RIGHTPAR LEFTBR neuralmainjump statutes RIGHTBR

    LEFTPAR         shift and go to state 23


state 19

    (22) modules -> FUNCTION functype . neuralinsertfuncs funcparam
    (24) neuralinsertfuncs -> . ID

    ID              shift and go to state 25

    neuralinsertfuncs              shift and go to state 24

state 20

    (29) functype -> VOID .

    ID              reduce using rule 29 (functype -> VOID .)


state 21

    (30) functype -> typing .

    ID              reduce using rule 30 (functype -> typing .)


state 22

    (6) vars -> typing COLON . neuralinsertvar varsarr varsmul vars
    (8) neuralinsertvar -> . ID

    ID              shift and go to state 27

    neuralinsertvar                shift and go to state 26

state 23

    (1) program -> PROGRAM neuraladdfuncdir varsgl modules MAIN LEFTPAR . RIGHTPAR LEFTBR neuralmainjump statutes RIGHTBR

    RIGHTPAR        shift and go to state 28


state 24

    (22) modules -> FUNCTION functype neuralinsertfuncs . funcparam
    (25) funcparam -> . LEFTPAR parameters RIGHTPAR SEMICOLON varsgl LEFTBR neuralinitfuncs statutes RIGHTBR neuralfuncsize neuralendfuncs modules

    LEFTPAR         shift and go to state 30

    funcparam                      shift and go to state 29

state 25

    (24) neuralinsertfuncs -> ID .

    LEFTPAR         reduce using rule 24 (neuralinsertfuncs -> ID .)


state 26

    (6) vars -> typing COLON neuralinsertvar . varsarr varsmul vars
    (11) varsarr -> . neuralinitdim CTEINT neuralenddim
    (12) varsarr -> . empty
    (14) neuralinitdim -> . LEFTSQR
    (137) empty -> .

    LEFTSQR         shift and go to state 34
    SEMICOLON       reduce using rule 137 (empty -> .)
    COMMA           reduce using rule 137 (empty -> .)

    varsarr                        shift and go to state 31
    neuralinitdim                  shift and go to state 32
    empty                          shift and go to state 33

state 27

    (8) neuralinsertvar -> ID .

    LEFTSQR         reduce using rule 8 (neuralinsertvar -> ID .)
    SEMICOLON       reduce using rule 8 (neuralinsertvar -> ID .)
    COMMA           reduce using rule 8 (neuralinsertvar -> ID .)


state 28

    (1) program -> PROGRAM neuraladdfuncdir varsgl modules MAIN LEFTPAR RIGHTPAR . LEFTBR neuralmainjump statutes RIGHTBR

    LEFTBR          shift and go to state 35


state 29

    (22) modules -> FUNCTION functype neuralinsertfuncs funcparam .

    MAIN            reduce using rule 22 (modules -> FUNCTION functype neuralinsertfuncs funcparam .)


state 30

    (25) funcparam -> LEFTPAR . parameters RIGHTPAR SEMICOLON varsgl LEFTBR neuralinitfuncs statutes RIGHTBR neuralfuncsize neuralendfuncs modules
    (31) parameters -> . typing COLON neuralinsertparam idarray mulparams
    (32) parameters -> . empty
    (19) typing -> . INT
    (20) typing -> . FLOAT
    (21) typing -> . CHAR
    (137) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    RIGHTPAR        reduce using rule 137 (empty -> .)

    parameters                     shift and go to state 36
    typing                         shift and go to state 37
    empty                          shift and go to state 38

state 31

    (6) vars -> typing COLON neuralinsertvar varsarr . varsmul vars
    (9) varsmul -> . SEMICOLON
    (10) varsmul -> . COMMA neuralinsertvar varsarr varsmul

    SEMICOLON       shift and go to state 40
    COMMA           shift and go to state 41

    varsmul                        shift and go to state 39

state 32

    (11) varsarr -> neuralinitdim . CTEINT neuralenddim

    CTEINT          shift and go to state 42


state 33

    (12) varsarr -> empty .

    SEMICOLON       reduce using rule 12 (varsarr -> empty .)
    COMMA           reduce using rule 12 (varsarr -> empty .)


state 34

    (14) neuralinitdim -> LEFTSQR .

    CTEINT          reduce using rule 14 (neuralinitdim -> LEFTSQR .)


state 35

    (1) program -> PROGRAM neuraladdfuncdir varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR . neuralmainjump statutes RIGHTBR
    (3) neuralmainjump -> .

    READ            reduce using rule 3 (neuralmainjump -> .)
    WRITE           reduce using rule 3 (neuralmainjump -> .)
    RETURN          reduce using rule 3 (neuralmainjump -> .)
    IF              reduce using rule 3 (neuralmainjump -> .)
    FOR             reduce using rule 3 (neuralmainjump -> .)
    MEDIA           reduce using rule 3 (neuralmainjump -> .)
    PLOTXY          reduce using rule 3 (neuralmainjump -> .)
    MEDIANA         reduce using rule 3 (neuralmainjump -> .)
    MODA            reduce using rule 3 (neuralmainjump -> .)
    VARIANZA        reduce using rule 3 (neuralmainjump -> .)
    STDEV           reduce using rule 3 (neuralmainjump -> .)
    ID              reduce using rule 3 (neuralmainjump -> .)
    WHILE           reduce using rule 3 (neuralmainjump -> .)
    LEFTPAR         reduce using rule 3 (neuralmainjump -> .)
    CTEINT          reduce using rule 3 (neuralmainjump -> .)
    CTEFLOAT        reduce using rule 3 (neuralmainjump -> .)
    CTECHAR         reduce using rule 3 (neuralmainjump -> .)

    neuralmainjump                 shift and go to state 43

state 36

    (25) funcparam -> LEFTPAR parameters . RIGHTPAR SEMICOLON varsgl LEFTBR neuralinitfuncs statutes RIGHTBR neuralfuncsize neuralendfuncs modules

    RIGHTPAR        shift and go to state 44


state 37

    (31) parameters -> typing . COLON neuralinsertparam idarray mulparams

    COLON           shift and go to state 45


state 38

    (32) parameters -> empty .

    RIGHTPAR        reduce using rule 32 (parameters -> empty .)


state 39

    (6) vars -> typing COLON neuralinsertvar varsarr varsmul . vars
    (6) vars -> . typing COLON neuralinsertvar varsarr varsmul vars
    (7) vars -> . empty
    (19) typing -> . INT
    (20) typing -> . FLOAT
    (21) typing -> . CHAR
    (137) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    FUNCTION        reduce using rule 137 (empty -> .)
    MAIN            reduce using rule 137 (empty -> .)
    LEFTBR          reduce using rule 137 (empty -> .)

    typing                         shift and go to state 13
    vars                           shift and go to state 46
    empty                          shift and go to state 14

state 40

    (9) varsmul -> SEMICOLON .

    INT             reduce using rule 9 (varsmul -> SEMICOLON .)
    FLOAT           reduce using rule 9 (varsmul -> SEMICOLON .)
    CHAR            reduce using rule 9 (varsmul -> SEMICOLON .)
    FUNCTION        reduce using rule 9 (varsmul -> SEMICOLON .)
    MAIN            reduce using rule 9 (varsmul -> SEMICOLON .)
    LEFTBR          reduce using rule 9 (varsmul -> SEMICOLON .)


state 41

    (10) varsmul -> COMMA . neuralinsertvar varsarr varsmul
    (8) neuralinsertvar -> . ID

    ID              shift and go to state 27

    neuralinsertvar                shift and go to state 47

state 42

    (11) varsarr -> neuralinitdim CTEINT . neuralenddim
    (13) neuralenddim -> . RIGHTSQR

    RIGHTSQR        shift and go to state 49

    neuralenddim                   shift and go to state 48

state 43

    (1) program -> PROGRAM neuraladdfuncdir varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR neuralmainjump . statutes RIGHTBR
    (36) statutes -> . assign statuteaux
    (37) statutes -> . reading statuteaux
    (38) statutes -> . writing statuteaux
    (39) statutes -> . returning statuteaux
    (40) statutes -> . ifing statuteaux
    (41) statutes -> . whiling statuteaux
    (42) statutes -> . foring statuteaux
    (43) statutes -> . exp statuteaux
    (44) statutes -> . media statuteaux
    (45) statutes -> . plotxy statuteaux
    (46) statutes -> . mediana statuteaux
    (47) statutes -> . moda statuteaux
    (48) statutes -> . variance statuteaux
    (49) statutes -> . stdev statuteaux
    (64) assign -> . neuralassign idarray neuralassign2 assignexp SEMICOLON
    (69) reading -> . READ LEFTPAR neuralreadid idarray mulread RIGHTPAR SEMICOLON
    (73) writing -> . WRITE LEFTPAR neuralwrite mulwrite RIGHTPAR SEMICOLON
    (68) returning -> . RETURN LEFTPAR exp RIGHTPAR SEMICOLON
    (80) ifing -> . IF LEFTPAR exp neuralif THEN LEFTBR statutes RIGHTBR elsing
    (85) whiling -> . neuralwhile LEFTPAR exp neuralwhile2 DO LEFTBR statutes RIGHTBR
    (88) foring -> . FOR neuralfor idarray EQUAL exp neuralfor2 exp neuralfor3 LEFTBR statutes RIGHTBR
    (92) exp -> . andexp exp1
    (52) media -> . MEDIA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (57) plotxy -> . PLOTXY LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (53) mediana -> . MEDIANA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (54) moda -> . MODA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (56) variance -> . VARIANZA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (55) stdev -> . STDEV LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (65) neuralassign -> . ID
    (86) neuralwhile -> . WHILE
    (95) andexp -> . boolexp andexp1
    (99) boolexp -> . arithexp boolexp1
    (109) arithexp -> . geoexp arithexp1
    (114) geoexp -> . finexp geoexp1
    (121) finexp -> . addbottom exp popbottom
    (122) finexp -> . cteexp
    (119) addbottom -> . LEFTPAR
    (123) cteexp -> . CTEINT
    (124) cteexp -> . CTEFLOAT
    (125) cteexp -> . CTECHAR
    (126) cteexp -> . ID neuralexist paramsexp

    READ            shift and go to state 67
    WRITE           shift and go to state 68
    RETURN          shift and go to state 69
    IF              shift and go to state 70
    FOR             shift and go to state 72
    MEDIA           shift and go to state 74
    PLOTXY          shift and go to state 75
    MEDIANA         shift and go to state 76
    MODA            shift and go to state 77
    VARIANZA        shift and go to state 78
    STDEV           shift and go to state 79
    ID              shift and go to state 80
    WHILE           shift and go to state 81
    LEFTPAR         shift and go to state 50
    CTEINT          shift and go to state 88
    CTEFLOAT        shift and go to state 89
    CTECHAR         shift and go to state 90

    statutes                       shift and go to state 51
    assign                         shift and go to state 52
    reading                        shift and go to state 53
    writing                        shift and go to state 54
    returning                      shift and go to state 55
    ifing                          shift and go to state 56
    whiling                        shift and go to state 57
    foring                         shift and go to state 58
    exp                            shift and go to state 59
    media                          shift and go to state 60
    plotxy                         shift and go to state 61
    mediana                        shift and go to state 62
    moda                           shift and go to state 63
    variance                       shift and go to state 64
    stdev                          shift and go to state 65
    neuralassign                   shift and go to state 66
    neuralwhile                    shift and go to state 71
    andexp                         shift and go to state 73
    boolexp                        shift and go to state 82
    arithexp                       shift and go to state 83
    geoexp                         shift and go to state 84
    finexp                         shift and go to state 85
    addbottom                      shift and go to state 86
    cteexp                         shift and go to state 87

state 44

    (25) funcparam -> LEFTPAR parameters RIGHTPAR . SEMICOLON varsgl LEFTBR neuralinitfuncs statutes RIGHTBR neuralfuncsize neuralendfuncs modules

    SEMICOLON       shift and go to state 91


state 45

    (31) parameters -> typing COLON . neuralinsertparam idarray mulparams
    (33) neuralinsertparam -> . ID

    ID              shift and go to state 93

    neuralinsertparam              shift and go to state 92

state 46

    (6) vars -> typing COLON neuralinsertvar varsarr varsmul vars .

    FUNCTION        reduce using rule 6 (vars -> typing COLON neuralinsertvar varsarr varsmul vars .)
    MAIN            reduce using rule 6 (vars -> typing COLON neuralinsertvar varsarr varsmul vars .)
    LEFTBR          reduce using rule 6 (vars -> typing COLON neuralinsertvar varsarr varsmul vars .)


state 47

    (10) varsmul -> COMMA neuralinsertvar . varsarr varsmul
    (11) varsarr -> . neuralinitdim CTEINT neuralenddim
    (12) varsarr -> . empty
    (14) neuralinitdim -> . LEFTSQR
    (137) empty -> .

    LEFTSQR         shift and go to state 34
    SEMICOLON       reduce using rule 137 (empty -> .)
    COMMA           reduce using rule 137 (empty -> .)

    varsarr                        shift and go to state 94
    neuralinitdim                  shift and go to state 32
    empty                          shift and go to state 33

state 48

    (11) varsarr -> neuralinitdim CTEINT neuralenddim .

    SEMICOLON       reduce using rule 11 (varsarr -> neuralinitdim CTEINT neuralenddim .)
    COMMA           reduce using rule 11 (varsarr -> neuralinitdim CTEINT neuralenddim .)


state 49

    (13) neuralenddim -> RIGHTSQR .

    SEMICOLON       reduce using rule 13 (neuralenddim -> RIGHTSQR .)
    COMMA           reduce using rule 13 (neuralenddim -> RIGHTSQR .)


state 50

    (119) addbottom -> LEFTPAR .

    LEFTPAR         reduce using rule 119 (addbottom -> LEFTPAR .)
    CTEINT          reduce using rule 119 (addbottom -> LEFTPAR .)
    CTEFLOAT        reduce using rule 119 (addbottom -> LEFTPAR .)
    CTECHAR         reduce using rule 119 (addbottom -> LEFTPAR .)
    ID              reduce using rule 119 (addbottom -> LEFTPAR .)


state 51

    (1) program -> PROGRAM neuraladdfuncdir varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR neuralmainjump statutes . RIGHTBR

    RIGHTBR         shift and go to state 95


state 52

    (36) statutes -> assign . statuteaux
    (50) statuteaux -> . statutes
    (51) statuteaux -> . empty
    (36) statutes -> . assign statuteaux
    (37) statutes -> . reading statuteaux
    (38) statutes -> . writing statuteaux
    (39) statutes -> . returning statuteaux
    (40) statutes -> . ifing statuteaux
    (41) statutes -> . whiling statuteaux
    (42) statutes -> . foring statuteaux
    (43) statutes -> . exp statuteaux
    (44) statutes -> . media statuteaux
    (45) statutes -> . plotxy statuteaux
    (46) statutes -> . mediana statuteaux
    (47) statutes -> . moda statuteaux
    (48) statutes -> . variance statuteaux
    (49) statutes -> . stdev statuteaux
    (137) empty -> .
    (64) assign -> . neuralassign idarray neuralassign2 assignexp SEMICOLON
    (69) reading -> . READ LEFTPAR neuralreadid idarray mulread RIGHTPAR SEMICOLON
    (73) writing -> . WRITE LEFTPAR neuralwrite mulwrite RIGHTPAR SEMICOLON
    (68) returning -> . RETURN LEFTPAR exp RIGHTPAR SEMICOLON
    (80) ifing -> . IF LEFTPAR exp neuralif THEN LEFTBR statutes RIGHTBR elsing
    (85) whiling -> . neuralwhile LEFTPAR exp neuralwhile2 DO LEFTBR statutes RIGHTBR
    (88) foring -> . FOR neuralfor idarray EQUAL exp neuralfor2 exp neuralfor3 LEFTBR statutes RIGHTBR
    (92) exp -> . andexp exp1
    (52) media -> . MEDIA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (57) plotxy -> . PLOTXY LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (53) mediana -> . MEDIANA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (54) moda -> . MODA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (56) variance -> . VARIANZA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (55) stdev -> . STDEV LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (65) neuralassign -> . ID
    (86) neuralwhile -> . WHILE
    (95) andexp -> . boolexp andexp1
    (99) boolexp -> . arithexp boolexp1
    (109) arithexp -> . geoexp arithexp1
    (114) geoexp -> . finexp geoexp1
    (121) finexp -> . addbottom exp popbottom
    (122) finexp -> . cteexp
    (119) addbottom -> . LEFTPAR
    (123) cteexp -> . CTEINT
    (124) cteexp -> . CTEFLOAT
    (125) cteexp -> . CTECHAR
    (126) cteexp -> . ID neuralexist paramsexp

    RIGHTBR         reduce using rule 137 (empty -> .)
    READ            shift and go to state 67
    WRITE           shift and go to state 68
    RETURN          shift and go to state 69
    IF              shift and go to state 70
    FOR             shift and go to state 72
    MEDIA           shift and go to state 74
    PLOTXY          shift and go to state 75
    MEDIANA         shift and go to state 76
    MODA            shift and go to state 77
    VARIANZA        shift and go to state 78
    STDEV           shift and go to state 79
    ID              shift and go to state 80
    WHILE           shift and go to state 81
    LEFTPAR         shift and go to state 50
    CTEINT          shift and go to state 88
    CTEFLOAT        shift and go to state 89
    CTECHAR         shift and go to state 90
